Tools: Added eslint.

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,7 +1,12 @@
 {
     "extends": "../tsconfig.json",
     "compilerOptions": {
-        "outDir": "../lib/"
+        "noFallthroughCasesInSwitch": true,
+        "noImplicitAny": true,
+        "noImplicitOverride": true,
+        "noImplicitReturns": true,
+        "noImplicitThis": true,
+        "outDir": "../lib/",
     },
     "files": [
         "./index.ts"
