--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "devDependencies": {
         "@highcharts/dashboards": "2.2.0",
         "bundle-declarations-webpack-plugin": "^5.1.1",
+        "@typescript-eslint/eslint-plugin": "^7.15.0",
+        "eslint": "^8.56.0",
+        "eslint-plugin-brackets": "^0.1.3",
+        "eslint-plugin-jsdoc": "^48.5.0",
         "typescript": "^5.5.3",
         "webpack": "^5.92.1",
         "webpack-cli": "^5.1.4"
