--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "eslint": "^8.56.0",
         "eslint-plugin-brackets": "^0.1.3",
         "eslint-plugin-jsdoc": "^48.5.0",
+        "husky": "^9.0.11",
+        "lint-staged": "^15.2.7",
         "typescript": "^5.5.3",
         "webpack": "^5.92.1",
         "webpack-cli": "^5.1.4"
@@ -32,9 +34,16 @@
         "Dashboards",
         "Morningstar"
     ],
+    "lint-staged": {
+        "*.ts": [
+            "eslint"
+        ]
+    },
     "scripts": {
         "build": "tsc -p src/",
+        "prepare": "husky install",
         "test": "npm run build",
+        "test:precommit": "npm run test",
         "watch": "tsc -p src/ -w",
         "webpack": "webpack"
     }
