--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -50,7 +50,7 @@
                 "code": 80,
                 "comments": 80,
                 "ignoreUrls": true,
-                "ignorePattern": "`|eslint-disable-line|headerFormat|pointFormat|static defaultOptions| (extends|implements) |@\\w|\\w<|\\.\\/| highcharts\\/|\\]\\(#"
+                "ignorePattern": "`|eslint-disable-line| (?:extends|from|implements) |@\\w|\\w<|['\"]\\.\\/|\\]\\(#"
             }
         ],
         "no-dupe-class-members": 0,
