--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "eslint-plugin-jsdoc": "^48.5.0",
         "husky": "^9.0.11",
         "lint-staged": "^15.2.7",
+        "newman": "^6.1.3",
         "typescript": "^5.5.3",
         "webpack": "^5.92.1",
         "webpack-cli": "^5.1.4"
@@ -39,10 +40,15 @@
             "eslint"
         ]
     },
+    "peerDependencies": {
+        "@highcharts/dashboards": "^2.2.0"
+    },
     "scripts": {
         "build": "tsc -p src/",
         "prepare": "husky install",
-        "test": "npm run build",
+        "test": "npm run test:build",
+        "test:build": "npm run build",
+        "test:morningstar": "npx newman run tmp/Collection.json -e tmp/Environment.json",
         "test:precommit": "npm run test",
         "watch": "tsc -p src/ -w",
         "webpack": "webpack"
