--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "private": true,
-    "version": "0.0.1",
+    "version": "0.0.1-dev",
     "name": "@highcharts/morningstar-connectors",
     "license": "UNLICENSED",
-    "description": "Highcharts Dashboards connectors for Morningstar Data APIs",
+    "description": "Highcharts Dashboards connectors for Morningstar Direct Web Services",
     "author": "Highsoft AS",
     "bugs": "https://github.com/highcharts/morningstar-connectors/issues",
     "homepage": "https://github.com/highcharts/morningstar-connectors#readme",
@@ -22,18 +22,6 @@
         "webpack": "^5.92.1",
         "webpack-cli": "^5.1.4"
     },
-    "files": [
-        "dist/",
-        "lib/",
-        "LICENSE.md",
-        "README.md"
-    ],
-    "keywords": [
-        "Highcharts",
-        "Dashboards",
-        "Morningstar",
-        "Time Series"
-    ],
     "lint-staged": {
         "*.ts": [
             "eslint"
@@ -43,14 +31,17 @@
         "@highcharts/dashboards": "^2.2.0"
     },
     "scripts": {
-        "build": "tsc -p src/",
+        "build": "npm run webpack && npm run build:prepare && npm run build:pack && npm run build:cleanup",
+        "build:prepare": "mkdir -p build/package/ && cp -R dist lib LICENSE.md README.md build/package/ && cp package-build.json build/package/package.json",
+        "build:pack": "npm pack build/package/ --pack-destination build/",
+        "build:cleanup": "rm -rf build/package/",
         "prepare": "husky install",
-        "release": "npm pack",
-        "test": "npm run test:build",
-        "test:build": "npm run build",
-        "test:morningstar": "npx newman run tmp/Collection.json -e tmp/Environment.json",
+        "scripts": "tsc -p src/",
+        "test": "npm run test:prepare",
+        "test:morningstar": "newman run tmp/Collection.json -e tmp/Environment.json",
         "test:precommit": "npm run test",
+        "test:prepare": "npm run webpack",
         "watch": "tsc -p src/ -w",
-        "webpack": "npm run build && webpack"
+        "webpack": "npm run scripts && webpack"
     }
 }
