--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
         "eslint-plugin-jsdoc": "^48.5.0",
         "husky": "^9.0.11",
         "lint-staged": "^15.2.7",
-        "newman": "^6.1.3",
         "typescript": "^5.5.3",
         "webpack": "^5.92.1",
         "webpack-cli": "^5.1.4"
@@ -38,7 +37,7 @@
         "prepare": "husky install",
         "scripts": "tsc -p src/",
         "test": "npm run test:prepare",
-        "test:morningstar": "newman run tmp/Collection.json -e tmp/Environment.json",
+        "test:morningstar": "npx -y newman run tmp/Collection.json -e tmp/Environment.json",
         "test:precommit": "npm run test",
         "test:prepare": "npm run webpack",
         "watch": "tsc -p src/ -w",
