--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -6,7 +6,13 @@
         "noImplicitOverride": true,
         "noImplicitReturns": true,
         "noImplicitThis": true,
+        "sourceMap": true,
         "outDir": "../lib/",
+        "target": "ES2020",
+        "lib": [
+            "DOM",
+            "ES2020"
+        ]
     },
     "files": [
         "./index.ts"
