--- a/package.json
+++ b/package.json
@@ -8,18 +8,18 @@
     "bugs": "https://github.com/highcharts/morningstar-connectors/issues",
     "homepage": "https://github.com/highcharts/morningstar-connectors#readme",
     "repository": "https://github.com/highcharts/morningstar-connectors.git",
-    "main": "lib/index.js",
-    "types": "lib/index.d.ts",
+    "main": "code/es-modules/index.js",
+    "types": "code/es-modules/index.d.ts",
     "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^7.15.0",
+        "@typescript-eslint/eslint-plugin": "^7.17.0",
         "eslint": "^8.56.0",
         "eslint-plugin-brackets": "^0.1.3",
-        "eslint-plugin-jsdoc": "^48.5.0",
-        "husky": "^9.0.11",
+        "eslint-plugin-jsdoc": "^48.8.3",
+        "husky": "^9.1.2",
         "lint-staged": "^15.2.7",
         "ts-node": "^10.9.2",
         "typescript": "^5.5.4",
-        "webpack": "^5.92.1",
+        "webpack": "^5.93.0",
         "webpack-cli": "^5.1.4"
     },
     "lint-staged": {
@@ -32,7 +32,7 @@
     },
     "scripts": {
         "build": "npm run webpack && npm run build:prepare && npm run build:pack && npm run build:cleanup",
-        "build:prepare": "mkdir -p build/package/ && cp -R dist lib LICENSE.md README.md build/package/ && cp package-build.json build/package/package.json",
+        "build:prepare": "mkdir -p build/package/ && cp -R code/* LICENSE.md README.md build/package/ && cp package-build.json build/package/package.json",
         "build:pack": "npm pack build/package/ --pack-destination build/",
         "build:cleanup": "rm -rf build/package/",
         "demos": "npm run webpack && npm run demos:server",
