--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,5 +16,8 @@ jobs:
           node-version: 'lts/*'
           cache: 'npm'
 
+      - name: Install dependencies
+        run: npm install
+
       - name: Compile Webpack
         run: npm run webpack
