--- a/package.json
+++ b/package.json
@@ -28,22 +28,30 @@
         ]
     },
     "peerDependencies": {
-        "@highcharts/dashboards": "^2.2.0"
+        "@highcharts/dashboards": "^2.2.0",
+        "highcharts": ">=11.4.0"
     },
     "scripts": {
-        "build": "npm run webpack && npm run build:prepare && npm run build:pack && npm run build:cleanup",
-        "build:prepare": "mkdir -p build/package/ && cp -R code/* LICENSE.md README.md build/package/ && cp package-build.json build/package/package.json",
+        "build": "npm run webpack && npm run build:prepare && npm run build:copy && npm run build:pack && npm run build:cleanup",
+        "build:prepare": "rm -rf build/ ; mkdir -p build/package/",
+        "build:copy": "cp -R code/* LICENSE.md README.md build/package/ && cp package-build.json build/package/package.json",
         "build:pack": "npm pack build/package/ --pack-destination build/",
         "build:cleanup": "rm -rf build/package/",
         "demos": "npm run webpack && npm run demos:server",
         "demos:server": "(sleep 1 ; open http://localhost:8080) & python3 -m http.server --bind localhost 8080",
         "prepare": "rm -rf '.husky/_' ; husky",
-        "scripts": "tsc -p src/",
+        "scripts": "rm -rf code/ ; tsc -p src/",
+        "reset": "rm -rf bin/ build/ code/ node_modules/ ; npm i",
         "test": "npm run test:prepare",
         "test:morningstar": "npx -y newman run --bail tmp/Collection.json -e tmp/Environment.json",
         "test:precommit": "npm run test",
-        "test:prepare": "npm run webpack",
+        "test:prepare": "npm run build",
+        "test:unit-tests": "ts-node test/unit-tests/ts-run",
         "watch": "tsc -p src/ -w",
-        "webpack": "npm run scripts && webpack"
+        "webpack": "npm run scripts && webpack && npm run webpack:dts",
+        "webpack:dts": "npm run webpack:dts:mc && npm run webpack:dts:mrn && npm run webpack:dts:mts",
+        "webpack:dts:mc": "cp src/webpack.d.ts code/morningstar-connectors.d.ts && cp src/webpack.d.ts code/morningstar-connectors.src.d.ts",
+        "webpack:dts:mrn": "cp src/webpack.d.ts code/morningstar-rna-news.d.ts && cp src/webpack.d.ts code/morningstar-rna-news.src.d.ts",
+        "webpack:dts:mts": "cp src/webpack.d.ts code/morningstar-time-series.d.ts && cp src/webpack.d.ts code/morningstar-time-series.src.d.ts"
     }
 }
