--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,8 +6,9 @@ on:
       - 'main'
 
 jobs:
-  test-webpack:
-    name: Test Webpack
+
+  test-distribution:
+    name: Test build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -19,5 +20,21 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Compile Webpack
-        run: npm run webpack
+      - name: Build distribution file
+        run: npm run build
+
+  test-unit-tests:
+    name: Test unit-tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 'lts/*'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run unit-tests
+        run: npm test
