--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "types": "code/es-modules/index.d.ts",
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^7.17.0",
+        "@types/jsdom": "^21.1.7",
         "eslint": "^8.56.0",
         "eslint-plugin-brackets": "^0.1.3",
         "eslint-plugin-jsdoc": "^48.8.3",
         "husky": "^9.1.2",
+        "jsdom": "^24.1.1",
         "lint-staged": "^15.2.7",
         "ts-node": "^10.9.2",
         "typescript": "^5.5.4",
@@ -42,11 +44,11 @@
         "prepare": "rm -rf '.husky/_' ; husky",
         "scripts": "rm -rf code/ ; tsc -p src/",
         "reset": "rm -rf bin/ build/ code/ node_modules/ ; npm i",
-        "test": "npm run test:prepare",
+        "test": "npm run test:prepare && npm run test:unit-tests",
         "test:morningstar": "npx -y newman run --bail tmp/Collection.json -e tmp/Environment.json",
         "test:precommit": "npm run test",
-        "test:prepare": "npm run build",
-        "test:unit-tests": "ts-node test/unit-tests/ts-run",
+        "test:prepare": "npm run webpack",
+        "test:unit-tests": "ts-node test/unit-tests/runtime",
         "watch": "tsc -p src/ -w",
         "webpack": "npm run scripts && webpack && npm run webpack:dts",
         "webpack:dts": "npm run webpack:dts:mc && npm run webpack:dts:mrn && npm run webpack:dts:mts",
