--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -7,6 +7,7 @@
         "noImplicitReturns": true,
         "noImplicitThis": true,
         "sourceMap": true,
+        "module": "ES2020",
         "outDir": "../code/es-modules/",
         "target": "ES2020",
         "lib": [
