--- a/package.json
+++ b/package.json
@@ -35,20 +35,19 @@
     },
     "scripts": {
         "build": "npm run webpack && npm run build:prepare && npm run build:copy && npm run build:pack && npm run build:cleanup",
-        "build:prepare": "rm -rf build/ ; mkdir -p build/package/",
+        "build:cleanup": "rm -rf build/package/",
         "build:copy": "cp -R code/* LICENSE.md README.md build/package/ && cp package-build.json build/package/package.json",
         "build:pack": "npm pack build/package/ --pack-destination build/",
-        "build:cleanup": "rm -rf build/package/",
+        "build:prepare": "rm -rf build/ ; mkdir -p build/package/",
         "demos": "npm run webpack && npm run demos:server",
         "demos:server": "(sleep 1 ; open http://localhost:8080) & python3 -m http.server --bind localhost 8080",
         "prepare": "rm -rf '.husky/_' ; husky",
         "scripts": "rm -rf code/ ; tsc -p src/",
         "reset": "rm -rf bin/ build/ code/ node_modules/ ; npm i",
-        "test": "npm run test:prepare && npm run test:unit-tests",
+        "test": "npm run test:prepare",
         "test:morningstar": "npx -y newman run --bail tmp/Collection.json -e tmp/Environment.json",
-        "test:precommit": "npm run test",
         "test:prepare": "npm run webpack",
-        "test:unit-tests": "ts-node test/unit-tests/runtime",
+        "test:unit-tests": "npm run test:prepare && node -r ts-node/register --env-file .env test/unit-tests/runtime",
         "watch": "tsc -p src/ -w",
         "webpack": "npm run scripts && webpack && npm run webpack:dts",
         "webpack:dts": "npm run webpack:dts:mc && npm run webpack:dts:mrn && npm run webpack:dts:mts",
