--- a/package.json
+++ b/package.json
@@ -44,10 +44,9 @@
         "prepare": "rm -rf '.husky/_' ; husky",
         "scripts": "rm -rf code/ ; tsc -p src/",
         "reset": "rm -rf bin/ build/ code/ node_modules/ ; npm i",
-        "test": "npm run test:prepare",
+        "test": "npm run test:unit-tests",
         "test:morningstar": "npx -y newman run --bail tmp/Collection.json -e tmp/Environment.json",
-        "test:prepare": "npm run webpack",
-        "test:unit-tests": "npm run test:prepare && node -r ts-node/register --env-file .env test/unit-tests/runtime",
+        "test:unit-tests": "npm run webpack && node -r ts-node/register --env-file .env test/unit-tests/runtime",
         "watch": "tsc -p src/ -w",
         "webpack": "npm run scripts && webpack && npm run webpack:dts",
         "webpack:dts": "npm run webpack:dts:mc && npm run webpack:dts:mrn && npm run webpack:dts:mts",
