--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build webpack
+      - name: Build webpack bundles
         run: npm run webpack
 
       - name: Run unit-tests
