Added unit tests (#6)
* CI: Added initial unit-tests.
* Added request to MorningstarError and improved test runtime.
* Integrated search params into MorningstarURL.
* Fixed distribution.
* Fixed JSON validation in TimeSeries and improved unit-tests.
* Fixed table rows in TimeSeries converters.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
 
     /* Modules */
     // "module": "commonjs",                             /* Specify what module code is generated. */
-    "module": "ES6",
+    "module": "CommonJS",
     // "rootDir": "./",                                  /* Specify the root folder within your source files. */
     // "moduleResolution": "node10",                     /* Specify how TypeScript looks up a file from a given module specifier. */
     "moduleResolution": "node",
@@ -116,7 +116,7 @@
     // these options are overrides used only by ts-node
     // same as the --compilerOptions flag and the TS_NODE_COMPILER_OPTIONS environment variable
     "compilerOptions": {
-      "module": "commonjs"
+      "module": "CommonJS"
     }
   }
 }
