--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,8 +6,9 @@ on:
       - 'main'
 
 jobs:
-  test-webpack:
-    name: Test Webpack
+
+  test_distribution:
+    name: Test distribution
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -19,5 +20,27 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Compile Webpack
+      - name: Build distribution bundle
+        run: npm run build
+
+  test_unit-tests:
+    name: Test unit-tests
+    runs-on: ubuntu-latest
+    env:
+      MORNINGSTAR_PASSWORD: ${{ secrets.MORNINGSTAR_PWD }}
+      MORNINGSTAR_USERNAME: ${{ secrets.MORNINGSTAR_USERNAME }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 'lts/*'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build webpack bundles
         run: npm run webpack
+
+      - name: Run unit-tests
+        run: npx ts-node test/unit-tests/runtime
