--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,6 +23,22 @@ jobs:
       - name: Build distribution bundle
         run: npm run build
 
+  test_eslint:
+    name: Test eslint style
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 'lts/*'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Test eslint style
+        run: npx eslint .
+
   test_unit-tests:
     name: Test unit-tests
     runs-on: ubuntu-latest
