--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -36,6 +36,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Build webpack bundles
+        run: npm run webpack
+
       - name: Test eslint style
         run: npx eslint .
 
