--- a/src/CLI/tsconfig.json
+++ b/src/CLI/tsconfig.json
@@ -7,6 +7,6 @@
         "outDir": "../../bin/"
     },
     "files": [
-        "morningstar-connectors.ts"
+        "connectors-morningstar.ts"
     ]
 }
