Add newline at end of file and eslint rule to enforce

--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -67,6 +67,7 @@
         "semi": 0,
         "spaced-comment": ["error", "always", { "markers": ["/"] }],
         "valid-jsdoc": 0,
+        "eol-last": ["error", "always"],
         "@typescript-eslint/array-type": 0,
         "@typescript-eslint/explicit-function-return-type": 0, // covered by TypeScript
         "@typescript-eslint/indent": [
