--- a/.eslintrc
+++ b/.eslintrc
@@ -79,6 +79,7 @@
                 "require-unicode-regexp": 1,
                 "space-before-function-paren": 2,
                 "strict": 0,
+                "eol-last": ["error", "always"],
                 "@typescript-eslint/restrict-plus-operands": 0,
                 "@typescript-eslint/restrict-template-expressions": 0,
                 "jsdoc/check-alignment": 1,
