--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "main": "code/es-modules/index.js",
     "types": "code/es-modules/index.d.ts",
     "devDependencies": {
+        "@aws-sdk/client-s3": "^3.592.0",
+        "@aws-sdk/credential-providers": "^3.592.0",
         "@typescript-eslint/eslint-plugin": "^7.17.0",
+        "@types/gulp": "^4.0.17",
         "@types/jsdom": "^21.1.7",
         "@types/node": "^20.0.0",
         "eslint": "^8.56.0",
         "eslint-plugin-brackets": "^0.1.3",
         "eslint-plugin-jsdoc": "^48.8.3",
+        "gulp": "^5.0.0",
         "husky": "^9.1.2",
         "jsdom": "^24.1.1",
         "lint-staged": "^15.2.7",
@@ -58,7 +62,7 @@
         "test:unit-tests": "ts-node test/unit-tests/runtime",
         "watch": "tsc -p src/ -w",
         "webpack": "npm run scripts && webpack && npm run webpack:dts",
-        "webpack:dts": "npm run webpack:dts:cm && npm run webpack:dts:dbm && npm run webpack:dts:dgm && npm run webpack:dts:hcm",
+        "webpack:dts": "npm run webpack:dts:cm",
         "webpack:dts:cm": "cp src/webpack.d.ts code/connectors-morningstar.d.ts && cp src/webpack.d.ts code/connectors-morningstar.src.d.ts",
         "webpack:dts:dbm": "cp src/webpack.d.ts code/dashboards-morningstar.d.ts && cp src/webpack.d.ts code/dashboards-morningstar.src.d.ts",
         "webpack:dts:dgm": "cp src/webpack.d.ts code/datagrid-morningstar.d.ts && cp src/webpack.d.ts code/datagrid-morningstar.src.d.ts",
