--- a/package.json
+++ b/package.json
@@ -15,19 +15,18 @@
         "@aws-sdk/client-s3": "^3.592.0",
         "@aws-sdk/credential-providers": "^3.592.0",
         "@typescript-eslint/eslint-plugin": "^7.17.0",
-        "@types/gulp": "^4.0.17",
         "@types/jsdom": "^21.1.7",
         "@types/node": "^20.0.0",
+        "bundle-declarations-webpack-plugin": "^5.1.1",
         "eslint": "^8.56.0",
         "eslint-plugin-brackets": "^0.1.3",
         "eslint-plugin-jsdoc": "^48.8.3",
-        "gulp": "^5.0.0",
         "husky": "^9.1.2",
         "jsdom": "^24.1.1",
         "lint-staged": "^15.2.7",
         "ts-node": "^10.9.2",
         "typescript": "~5.5.4",
-        "webpack": "^5.93.0",
+        "webpack": "^5.94.0",
         "webpack-cli": "^5.1.4"
     },
     "lint-staged": {
@@ -62,11 +61,6 @@
         "test:morningstar": "npx -y newman run --bail tmp/Collection.json -e tmp/Environment.json",
         "test:unit-tests": "ts-node test/unit-tests/runtime",
         "watch": "tsc -p src/ -w",
-        "webpack": "npm run scripts && webpack && npm run webpack:dts",
-        "webpack:dts": "npm run webpack:dts:cm",
-        "webpack:dts:cm": "cp src/webpack.d.ts code/connectors-morningstar.d.ts && cp src/webpack.d.ts code/connectors-morningstar.src.d.ts",
-        "webpack:dts:dbm": "cp src/webpack.d.ts code/dashboards-morningstar.d.ts && cp src/webpack.d.ts code/dashboards-morningstar.src.d.ts",
-        "webpack:dts:dgm": "cp src/webpack.d.ts code/datagrid-morningstar.d.ts && cp src/webpack.d.ts code/datagrid-morningstar.src.d.ts",
-        "webpack:dts:hcm": "cp src/webpack.d.ts code/highcharts-morningstar.d.ts && cp src/webpack.d.ts code/highcharts-morningstar.src.d.ts"
+        "webpack": "npm run scripts && webpack"
     }
 }
