Added regular dist script for build, gzip, and upload. (#30)

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "main": "code/es-modules/index.js",
     "types": "code/es-modules/index.d.ts",
     "devDependencies": {
+        "@aws-sdk/client-s3": "^3.592.0",
+        "@aws-sdk/credential-providers": "^3.592.0",
         "@typescript-eslint/eslint-plugin": "^7.17.0",
         "@types/jsdom": "^21.1.7",
         "@types/node": "^20.0.0",
@@ -22,8 +24,8 @@
         "jsdom": "^24.1.1",
         "lint-staged": "^15.2.7",
         "ts-node": "^10.9.2",
-        "typescript": "^5.5.4",
-        "webpack": "^5.93.0",
+        "typescript": "~5.5.4",
+        "webpack": "^5.94.0",
         "webpack-cli": "^5.1.4"
     },
     "lint-staged": {
@@ -35,7 +37,7 @@
         ]
     },
     "peerDependencies": {
-        "@highcharts/dashboards": ">=2.2.0",
+        "@highcharts/dashboards": ">=2.3.0",
         "highcharts": ">=11.4.0"
     },
     "scripts": {
@@ -46,6 +48,7 @@
         "build:prepare": "rm -rf build/ ; mkdir -p build/package/",
         "demos": "npm run webpack && npm run demos:server",
         "demos:server": "(sleep 1 ; open http://localhost:8080) & node bin/connectors-morningstar demos",
+        "dryrun": "ts-node tools/dist --dryrun",
         "husky:pre-commit": "npx lint-staged && npm run webpack",
         "prepare": "rm -rf '.husky/_' ; husky",
         "scripts": "npm run scripts:bin && npm run scripts:code",
